# deepfake-detection-api

./: Dockerfile  helper.py  main.py  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/api/endpoints/: prediction.py
app/services/: ai_model.py
